2000-06-20  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.in: Added check for recent libxml
	* config.mak.in: Added defeine for HAVE_LIBXML
	* Tools/gsdoc.m: Added from GSDoc and modified for standard
	libxml 2.0 installation
	* Tools/gsdoc-0_6_5.dtd: Added from GSDoc
	* Tools/gsdoc.gsdoc: Added from GSDoc
	* Tools/gnustep.gsdoc: Added from GSDoc
	* GSDoc: all removed
	* Examples: removed obsolete code.

2000-06-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDate.m: Remove obsolete classForConnectedCoder method
	* Source/NSPort.m: ditto
	* Source/NSTcpPort.m: ditto
	* Source/NSUdpPort.m: ditto
	* Source/GNUmakefile: remove ConnectedCoder
	* Source/ConnectedCoder.m: removed
	* Headers/gnustep/base/ConnectedCoder.h: removed

2000-06-16  Richard Frith-Macdonald <rfm@gnu.org>

	Removal of non-OpenStep unused classes.
	* Headers/gnustep/base/Archiver.h: removed
	* Headers/gnustep/base/Array.h: removed
	* Headers/gnustep/base/ArrayPrivate.h: removed
	* Headers/gnustep/base/Bag.h: removed
	* Headers/gnustep/base/BinaryTree.h: removed
	* Headers/gnustep/base/BinaryTreeNode.h: removed
	* Headers/gnustep/base/CircularArray.h: removed
	* Headers/gnustep/base/CircularArrayPrivate.h: removed
	* Headers/gnustep/base/Collecting.h: removed
	* Headers/gnustep/base/Collection.h: removed
	* Headers/gnustep/base/CollectionPrivate.h: removed
	* Headers/gnustep/base/DelegatePool.h: removed
	* Headers/gnustep/base/Dictionary.h: removed
	* Headers/gnustep/base/GapArray.h: removed
	* Headers/gnustep/base/GapArrayPrivate.h: removed
	* Headers/gnustep/base/Heap.h: removed
	* Headers/gnustep/base/IndexedCollecting.h: removed
	* Headers/gnustep/base/IndexedCollection.h: removed
	* Headers/gnustep/base/IndexedCollectionPrivate.h: removed
	* Headers/gnustep/base/InvalidationListening.h: removed
	* Headers/gnustep/base/Invocation.h: removed
	* Headers/gnustep/base/Invoking.h: removed
	* Headers/gnustep/base/KeyedCollecting.h: removed