@@ -1,3 +1,7 @@
+2000-06-21  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSScanner.m: ([-scanHexInt:]) fixed to permit leading 0x or 0X
+
 2000-06-20  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* configure.in: Added check for recent libxml
